# recsys-22-user-attributes-recommender

./: .gitignore  Dockerfile  Jenkinsfile  README.md  bpr.py  dataset_app.py  gru.py  module_registry.py  padding.py  preprocess.py  preprocess.sh  pyproject.toml  registry.py  requirements.txt  run.py  run_recbole.py
callbacks/: prediction_logger.py
config/: config_builder.py  test.py
config/bert4rec/: bert4rec_config.py  bert4rec_constants.py
config/factories/: configuration.py  context.py  object_factory.py  tokenizer_factory.py
config/sasrec/: sas_rec_config.py  sas_rec_constants.py
configs/: base_config.py  config.py
configs-new/: merge.sh
configs-new/bert4rec/: ml-1m.remote.yaml  ml-1m.yaml
configs-new/gru/: ml-1m.remote.yaml  ml-1m.yaml
configs-new/kebert4rec/: local-example-dictionary.yaml
configs-new/narm/: ml-1m.yaml
configs-new/sasrec-cross/: ml-1m.yaml
configs-new/sasrec-neg/: ml-1m.remote.yaml  ml-1m.yaml
configs/amazon-beauty/: bert4rec.jsonnet  bert4rec.yml  sasrec.jsonnet  (+3 more)
data/: collate.py  dataset.py  mp.py
dataset/: movielens.py  quick_indices_and_splits.py  utils.py  yoochoose.py
datasets/: dataset.py  mappers.py  transformers.py  utils.py
docs/: Configuration.md  Hyperparameter Search.md  README.md  data_set_typer_app_.md  developer_guide.md  project_overview.md  user_guide.md
init/: config.py  config_builder.py  container.py  context.py  object_factory.py  test.py  trainer_builder.py
itemization/: itemizer.py
k8s/: Dockerfile  README.md  create_image.sh  entrypoint.sh  job.yml  pod.yml
logger/: GradientLoggerCallback.py  LossLoggerCallback.py  MetricLoggerCallback.py  SampledMetricLoggerCallback.py  TrainLossLoggerCallback.py
logging/: MetricLoggerCallback.py
metrics/: base.py  common.py  dcg.py  f1.py  metric.py  mrr.py  ndcg.py  precision.py  ranking_metrics.py  recall.py
modules/: __init__.py  bert4rec_module.py  caser_module.py  constants.py  cosrec_module.py  gru_module.py  hgn_module.py  kebert4rec_module.py  metrics_trait.py  narm_module.py  rnn_module.py  sas_rec_module.py
requirements/: base.txt
resources/: gru-train.conf
runner/: create_csv_dataset_splits.py  create_csv_index.py  create_next_item_index.py  create_reader_index.py  gru-test.conf  gru-train.conf  gru.py  run_model.py  sasrec.py  sasrec.yml  train_bert4rec.py  util.py
search/: processor.py  resolver.py
tests/: conftest.py  test_cloze_mask.py  test_config_processor.py  test_cut_to_fixed_sequence_length.py  test_dcg.py  test_f1.py  test_mask.py  test_mrr.py  test_ndcg.py  test_next.py  test_pos_neg.py  test_positive_negative.py  test_precision.py  test_recall.py  test_resolver.py  test_target_extractor.py  test_target_position_extractor.py  test_tokenizer.py  test_utils_tokenization.py  test_vocabulary.py  util_test.py  util_test_templating.py  util_test_tokenizer.py
tokenization/: __init__.py  tokenizer.py  vocabulary.py
utils/: ioutils.py  tensor_utils.py
(+916 files in other folders)
