[tool.poetry]
name = "asme"
version = "0.5.0"
description = "A framework for training and evaluating item prediction recommender models."
authors = ["Alexander Dallmann <dallman@informatik.uni-wuerzburg.de>"]
license = "LGPLv3"

packages = [
    { include = "asme", from = "src"},
    { include = "data", from = "src"},
    { include = "datasets", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
tqdm = "^4.59.0"
numpy = "~1.19.5"
scipy = "^1.6.1"
scikit-learn = "^0.23.2"
pandas = "^1.1.0"
pytest = "^6.0.1"
jsonnet = "^0.17.0"
torch = "~1.7.1"
torchvision = "~0.8.2"
pytorch-lightning = "1.2.4"
typer = "^0.3.2"
wandb = "^0.10.22"
mlflow = "^1.14.1"
optuna = "^2.5.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asme = 'asme.main:app'