[tool.poetry]
name = "asme"
version = "1.0.0"
description = "A framework for training and evaluating item prediction recommender models."
authors = ["Alexander Dallmann <dallman@informatik.uni-wuerzburg.de>"]
license = "LGPLv3"

packages = [
    { include = "asme", from = "src"},
    { include = "data", from = "src"},
    { include = "datasets", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
tqdm = "^4.59.0"
numpy = "~1.19.5"
scipy = "^1.6.1"
scikit-learn = "^0.23.2"
pandas = "^1.1.0"
pytest = "^6.0.1"
jsonnet = "^0.17.0"
torch = "~1.9.0"
torchvision = "~0.10.0"
pytorch-lightning = "1.4.2"
click = "^7.1.2"
typer = "^0.3.2"
wandb = "^0.10.22"
mlflow = "^1.14.1"
optuna = "2.9.0"
redis = "^3.5.3"
dataclasses-json = "^0.5.4"
flatten-dict = "^0.4.2"

[tool.poetry.dev-dependencies]
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asme = 'asme.main:app'
asme-datasets = 'datasets.main:app'
