[tool.poetry]
name = "asme"
version = "1.0.0"
description = "A framework for training and evaluating item prediction recommender models."
authors = ["Alexander Dallmann <dallman@informatik.uni-wuerzburg.de>"]
license = "LGPLv3"

packages = [
    { include = "asme", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tqdm = "^4.59.0"
numpy = "^1.22.3"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
pytest = "^7.1.1"
jsonnet = "^0.18.0"
torch = "~1.11.0"
torchvision = "~0.12.0"
pytorch-lightning = "1.6.3"
click = "^8.1.3"
typer = "^0.4.1"
wandb = "^0.12.15"
mlflow = "^1.25.1"
optuna = "2.10.0"
redis3 = "^3.5.2.3"
dataclasses-json = "^0.5.7"
flatten-dict = "^0.4.2"
loguru = "^0.6.0"
aim = "^3.9.4"


[tool.poetry.dev-dependencies]
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asme = 'asme.core.main:app'
